--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">KotlinAgendaCalendarView</string>
+
+    <string name="no_events">No events for this day</string>
+
 </resources>
